--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,6 +15,9 @@ jobs:
   test:
     name: run-go-test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: go
     steps:
       - name: checkout
         uses: actions/checkout@v6.0.1
@@ -25,4 +28,4 @@ jobs:
           go-version: '1.23'
       - name: run-test
         run: |-
-          go test -v ./go
+          go test -v
